# Sorisae-AI

./: .codeai-template.json  .dockerignore  .easignore  .env.example  .gitignore  .hintrc  .runtime_audio_bin_check.txt  .runtime_engine_check.txt  .runtime_py_imports_check.txt  .tmp_nogpu_merged.yml  .tmp_restart_verify.py  AGENTS.md  CRITICAL_2_BUILD_PLAN.md  CRITICAL_2_CHECKLIST.md  CRITICAL_2_SUMMARY.md  Dockerfile  Dockerfile.backend  Dockerfile.sorisae-flask  GPS_REPOSITORY_STRUCTURE_COMPLETE.md  GPS_SERVICE_IMPLEMENTATION_ANALYSIS.md  Makefile  NADOTONGRYOKSA_LBS_CHECKLIST.md  NADOTONGRYOKSA_SONG_TRANSLATION_CHECKLIST.md  NADOTONGRYOKSA_SONG_TRANSLATION_DESIGN.md  NADOTONGRYOKSA_USER_VOICE_SINGING_CHECKLIST.md  NADOTONGRYOKSA_USER_VOICE_SINGING_DESIGN.md  NADOTONGRYOKSA_VOIP_BACKEND_DESIGN.md  ORCHESTRATOR_WORLDLINCO_ANALYSIS_CHECKLIST.md  PLANNER.md  README.md  SHINSEGYE_COMPLETE_SYSTEM_ANALYSIS.md  SHINSEGYE_MULTIVERSION_SUMMARY.md  TECHNICAL_REPORT_VOIP_ORCHESTRATOR.md  TRANSLATION_VERIFICATION_COMPLETE.md  VOICE_DETECTION_TEST_PROTOCOL.md  add_main_functions.py  add_missing_translations.py  add_pt_hi_it_tr.py  analyze_new_warnings.ps1  app.db  (+141 more)
.github/: copilot-instructions.md
ai/: __init__.py  adapters.py  evaluation.py  features.py  inference.py  model_registry.py  router.py  schemas.py  train.py
app/: auth_routes.py  diagnostics.py  globals.css  layout.tsx  main.py  ops_routes.py  order_profile.py  page.tsx  routes.py  runtime.py
backend/: admin_review_utils.py  admin_router.py  admin_self_run_worker.py  auth.py  auth_identity_router.py  auth_router.py  (+21 more)
(+2058 files in other folders)
