[build-system]
requires = ["setuptools>=75,<83", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeai"
version = "0.0.0"
description = "codeAI backend runtime"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.136.3,<1.0",
    "uvicorn[standard]>=0.48,<1.0",
    "sqlalchemy>=2.0.50,<3.0",
    "psycopg2-binary>=2.9.12,<3.0",
    "bcrypt>=4.1,<5.0",
    "python-jose[cryptography]>=3.5,<4.0",
    "pydantic>=2.13.4,<3.0",
    "httpx>=0.28.1,<1.0",
    "requests>=2.34.2,<3.0",
    "redis>=5.3.1,<6.0",
    "Pillow>=12.2,<13.0",
    "torch>=2.6,<3.0",
    "qdrant-client>=1.18,<2.0",
    "grpcio>=1.80,<2.0",
    "email-validator>=2.3,<3.0",
    "python-multipart>=0.0.29,<1.0",
    "webauthn>=2.7.1,<3.0",
]

[project.optional-dependencies]
audit = [
    "pip-audit>=2.10,<3.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
